--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="src\assets\favicon.ico">
+    <link rel="icon" href="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Khalid Laundry | Best Laundry & Dry Cleaning in Tanzania | Affordable & Convenient</title>
