--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <link rel="icon" href="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="description" content="Khalid Laundry offers the best laundry and dry cleaning services in Tanzania. Affordable, convenient, and high-quality care for your clothes.">
+    <meta name="keywords" content="Laundry, Dry Cleaning, Tanzania, Affordable Laundry, Convenient Laundry, Best Laundry Service">
     <title>Khalid Laundry | Best Laundry & Dry Cleaning in Tanzania | Affordable & Convenient</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LYR3F9FVM7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LYR3F9FVM7');
+</script>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script defer type="module" src="/src/main.js"></script>
   </body>
 </html>
